
[package]
name = "pkgtool"
version = "0.3.0"
edition = "2021"
authors = ["0xb0urn3"]
description = "Advanced multi-distribution package management tool"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
tokio = { version = "1.32.0", features = ["full"] }
color-eyre = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
async-trait = "0.1.74"
futures = "0.3"
config = "0.13"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
plotters = "0.3"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
zstd = "0.12"
rayon = "1.7"
regex = "1.9"
indicatif = "0.17"
